# InteriorDesign-for-ComfyUI

./: .gitignore  .tracking  README.md  __init__.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
controlnet_depth/: config.json
node/: colors.py  node.py  palette.py  pipeline.py  utils.py
own_controlnet/: config.json
workflow/: example.json  stable-desing-for-comfyui.json
