[project]
name = "interior-design-for-comfyui"
description = "This node is based on MykolaL/StableDesign"
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/RodrigoSKohl/"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "rodrigoskohl"
DisplayName = "Interior Design for Comfyui"
Icon = ""